--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                         </div>
                         <div class="contact-text">
                             <h3>Email</h3>
-                            <p>dilshan@example.com</p>
+                            <p>kdchamiladesilva@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -319,7 +319,6 @@
                             <div class="social-links">
                                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
                                 <a href="#"><i class="fab fa-github"></i></a>
-                                <a href="#"><i class="fab fa-twitter"></i></a>
                                 <a href="#"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
