feat: add comprehensive portfolio website with sections for about, education, experience, skills, projects, and contact

--- a/index.html
+++ b/index.html
@@ -237,13 +237,16 @@
                         <i class="fas fa-shopping-cart"></i>
                     </div>
                     <div class="project-content">
-                        <h3>E-Commerce Platform</h3>
-                        <p>A full-stack e-commerce solution with user authentication, payment processing, and admin dashboard.</p>
+                        <h3>𝐈𝐧𝐭𝐞𝐫𝐯𝐢𝐞𝐰𝐆𝐞𝐧𝐢𝐞</h3>
+                        <p>InterviewGenie, a smart AI-powered mock interview platform that helps users practice interviews and get instant, meaningful feedback.</p>
                         <div class="project-tags">
+                            <span class="project-tag">Next.js</span>
                             <span class="project-tag">React</span>
                             <span class="project-tag">Node.js</span>
-                            <span class="project-tag">MongoDB</span>
-                            <span class="project-tag">Stripe API</span>
+                            <span class="project-tag">PostgreSQL</span>
+                            <span class="project-tag">Drizzle ORM</span>
+                            <span class="project-tag">Tailwind CSS</span>
+                            <span class="project-tag">Gemini AI</span>
                         </div>
                         <a href="#" class="btn">View Project</a>
                     </div>
@@ -253,13 +256,16 @@
                         <i class="fas fa-robot"></i>
                     </div>
                     <div class="project-content">
-                        <h3>AI-Powered Chat Application</h3>
-                        <p>Real-time chat application with AI integration for smart responses and speech-to-text functionality.</p>
+                        <h3>Primier scales site (for Client)</h3>
+                        <p>End-to-end platform to manage scale repairs, calibrations, parts, billing, and certificates with role-based access.</p>
                         <div class="project-tags">
-                            <span class="project-tag">Next.js</span>
-                            <span class="project-tag">Socket.io</span>
-                            <span class="project-tag">Gemini AI</span>
+                            <span class="project-tag">React</span>
+                            <span class="project-tag">Node.js</span>
                             <span class="project-tag">PostgreSQL</span>
+                            <span class="project-tag">Express.js</span>
+                            <span class="project-tag">Tailwind CSS</span>
+                            <span class="project-tag">Google Cloud </span>
+                            <span class="project-tag">JWT/RBAC</span>
                         </div>
                         <a href="#" class="btn">View Project</a>
                     </div>
@@ -269,13 +275,18 @@
                         <i class="fas fa-chart-line"></i>
                     </div>
                     <div class="project-content">
-                        <h3>Data Visualization Dashboard</h3>
-                        <p>Interactive dashboard for data analysis and visualization with real-time updates.</p>
+                        <h3>ATM Guard AI</h3>
+                        <p>AI-Powered Real-Time Surveillance System for ATM Safety and Threat Detection.</p>
                         <div class="project-tags">
-                            <span class="project-tag">TypeScript</span>
-                            <span class="project-tag">D3.js</span>
+                            <span class="project-tag">OpenCV</span>
+                            <span class="project-tag">TensorFlow</span>
+                            <span class="project-tag">Python</span>
+                            <span class="project-tag">Node.js</span>
                             <span class="project-tag">Express.js</span>
-                            <span class="project-tag">Drizzle ORM</span>
+                            <span class="project-tag">React.js</span>
+                            <span class="project-tag">MongoDB</span>
+                            <span class="project-tag">Tailwind CSS</span>
+                            <span class="project-tag">Firebase</span>
                         </div>
                         <a href="#" class="btn">View Project</a>
                     </div>
