--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <div class="projects-grid">
                 <div class="project-card fade-in">
                     <div class="project-img">
-                        <i class="fas fa-shopping-cart"></i>
+                        <img src="𝐈𝐧𝐭𝐞𝐫𝐯𝐢𝐞𝐰𝐆𝐞𝐧𝐢𝐞.png" alt="InterviewGenie Project">
                     </div>
                     <div class="project-content">
                         <h3>𝐈𝐧𝐭𝐞𝐫𝐯𝐢𝐞𝐰𝐆𝐞𝐧𝐢𝐞</h3>
@@ -253,7 +253,7 @@
                 </div>
                 <div class="project-card fade-in delay-1">
                     <div class="project-img">
-                        <i class="fas fa-robot"></i>
+                        <img src="Primier_scales_site.png" alt="Premier Scales Site Project">
                     </div>
                     <div class="project-content">
                         <h3>Primier scales site (for Client)</h3>
@@ -272,7 +272,7 @@
                 </div>
                 <div class="project-card fade-in delay-2">
                     <div class="project-img">
-                        <i class="fas fa-chart-line"></i>
+                        <img src="ATM Guard AI.png" alt="ATM Guard AI Project">
                     </div>
                     <div class="project-content">
                         <h3>ATM Guard AI</h3>
