--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <nav>
-                <a href="#" class="logo">Dilshan</a>
+                <a href="#" class="logo">DC</a>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -38,8 +38,8 @@
             <div class="hero-content">
                 <div class="hero-text fade-in">
                     <h1>Hi, I'm <span>Dilshan Chamila</span></h1>
-                    <h2>Software Engineering Undergraduate</h2>
-                    <p>Building Scalable Web & AI-Powered Applications with MEARN Stack</p>
+                    <h2>BSc (Hons) Software Engineering Undergraduate</h2>
+                    <p>Building Scalable Web & AI-Powered Applications with MERN Stack</p>
                     <a href="#contact" class="btn">Get In Touch</a>
                 </div>
                 <div class="profile-image fade-in delay-1">
