--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                         </div>
                         <div class="contact-text">
                             <h3>Location</h3>
-                            <p>Sabaragamuwa University, Sri Lanka</p>
+                            <p>Puttalam, Sri Lanka</p>
                         </div>
                     </div>
                     <div class="contact-item">
