Add GitHub repository links to project buttons
- Link InterviewGenie project to interview-mocker-application repo
- Link Primier scales site project to primier-scales-site repo
- Link ATM Guard AI project to ATM-GuardAI repo

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             <span class="project-tag">Tailwind CSS</span>
                             <span class="project-tag">Gemini AI</span>
                         </div>
-                        <a href="#" class="btn">View Project</a>
+                        <a href="https://github.com/InterviewGenie-SUSL/interview-mocker-application" target="_blank" class="btn">View Project</a>
                     </div>
                 </div>
                 <div class="project-card fade-in delay-1">
@@ -267,7 +267,7 @@
                             <span class="project-tag">Google Cloud </span>
                             <span class="project-tag">JWT/RBAC</span>
                         </div>
-                        <a href="#" class="btn">View Project</a>
+                        <a href="https://github.com/DutheeshChelaka/primier-scales-site" target="_blank" class="btn">View Project</a>
                     </div>
                 </div>
                 <div class="project-card fade-in delay-2">
@@ -288,7 +288,7 @@
                             <span class="project-tag">Tailwind CSS</span>
                             <span class="project-tag">Firebase</span>
                         </div>
-                        <a href="#" class="btn">View Project</a>
+                        <a href="https://github.com/SE5104-Mini-Project/ATM-GuardAI" target="_blank" class="btn">View Project</a>
                     </div>
                 </div>
             </div>
