feat(hero): add looping typing animation to hero title
Apply .typing to hero h1 (“Hi, I'm Dilshan Chamila”)
Add CSS keyframes; 6s type → pause → erase loop (steps(46), 23ch) with caret
Preserve span highlight and fade-in; add reduced-motion fallback

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text fade-in">
-                    <h1>Hi, I'm <span>Dilshan Chamila</span></h1>
+                    <h1 class="typing">Hi, I'm <span>Dilshan Chamila</span></h1>
                     <h2>BSc (Hons) Software Engineering Undergraduate</h2>
                     <p>Building Scalable Web & AI-Powered Applications with MERN Stack</p>
                     <a href="#contact" class="btn">Get In Touch</a>
