--- a/index.html
+++ b/index.html
@@ -328,10 +328,17 @@
                         <div class="contact-text">
                             <h3>Social Media</h3>
                             <div class="social-links">
-                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a href="#"><i class="fab fa-github"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.linkedin.com/in/dcdskarunanayaka" target="_blank">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                                <a href="https://github.com/ChamilaDeSilvaKarunanayaka" target="_blank">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                                <a href="https://www.instagram.com/your_instagram_username" target="_blank">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
                             </div>
+
                         </div>
                     </div>
                 </div>
