--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
+                    <li><a href="#talents">Talents</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
                 <button class="theme-toggle" id="themeToggle">
@@ -291,6 +292,27 @@
                         <a href="https://github.com/SE5104-Mini-Project/ATM-GuardAI" target="_blank" class="btn">View Project</a>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Talents & Beyond Section -->
+    <section class="py-10 bg-gray-50" id="talents">
+        <div class="text-center mb-6">
+            <h2 class="text-3xl font-bold text-gray-800">✨ Talents & Beyond</h2>
+            <p class="text-gray-600 mt-2 max-w-2xl mx-auto">
+                🎤 From <strong>announcing</strong> to <strong>leadership</strong> and <strong>organizing events</strong> with IEEE & Society of Computer Science — 
+                I love bringing people together, inspiring ideas, and creating unforgettable experiences.
+            </p>
+        </div>
+
+        <div class="overflow-x-auto whitespace-nowrap scrollbar-hide px-4">
+            <div class="inline-flex space-x-4">
+                <img src="your-image1.jpg" alt="Announcing" class="w-72 h-48 rounded-2xl shadow-md object-cover hover:scale-105 transition-transform">
+                <img src="your-image2.jpg" alt="Leadership" class="w-72 h-48 rounded-2xl shadow-md object-cover hover:scale-105 transition-transform">
+                <img src="your-image3.jpg" alt="IEEE Event" class="w-72 h-48 rounded-2xl shadow-md object-cover hover:scale-105 transition-transform">
+                <img src="your-image4.jpg" alt="Society Event" class="w-72 h-48 rounded-2xl shadow-md object-cover hover:scale-105 transition-transform">
+                <img src="your-image5.jpg" alt="Extra Activities" class="w-72 h-48 rounded-2xl shadow-md object-cover hover:scale-105 transition-transform">
             </div>
         </div>
     </section>
