--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text fade-in">
-                    <h1 class="typing">Hi, I'm <span>Dilshan Chamila</span></h1>
+                    <h1 class="typing">Hi, I'm <span>DCDS Karunanayaka</span></h1>
                     <h2>BSc (Hons) Software Engineering Undergraduate</h2>
                     <p>Building Scalable Web & AI-Powered Applications with MERN Stack</p>
                     <a href="#contact" class="btn">Get In Touch</a>
