feat: Redesign Communication Skills with card-based layout and star ratings

--- a/index.html
+++ b/index.html
@@ -184,41 +184,61 @@
                 <div class="section-title">
                     <h2>Communication Skills</h2>
                 </div>
-                <div class="skills-bars fade-in">
-                    <div class="skill-bar">
-                        <div class="skill-info">
-                            <span class="skill-name">Team Collaboration</span>
-                            <span class="skill-percentage">95%</span>
+                <div class="communication-grid">
+                    <div class="communication-card fade-in">
+                        <div class="comm-icon-wrapper">
+                            <i class="fas fa-users"></i>
                         </div>
-                        <div class="skill-progress">
-                            <div class="skill-progress-bar" style="width: 95%"></div>
-                        </div>
-                    </div>
-                    <div class="skill-bar">
-                        <div class="skill-info">
-                            <span class="skill-name">Problem Solving</span>
-                            <span class="skill-percentage">90%</span>
-                        </div>
-                        <div class="skill-progress">
-                            <div class="skill-progress-bar" style="width: 90%"></div>
+                        <h3>Team Collaboration</h3>
+                        <p>Experienced in working with cross-functional teams, actively contributing to discussions and fostering a collaborative environment</p>
+                        <div class="comm-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                         </div>
                     </div>
-                    <div class="skill-bar">
-                        <div class="skill-info">
-                            <span class="skill-name">Client Communication</span>
-                            <span class="skill-percentage">88%</span>
+                    <div class="communication-card fade-in delay-1">
+                        <div class="comm-icon-wrapper">
+                            <i class="fas fa-lightbulb"></i>
                         </div>
-                        <div class="skill-progress">
-                            <div class="skill-progress-bar" style="width: 88%"></div>
+                        <h3>Problem Solving</h3>
+                        <p>Strong analytical mindset with ability to break down complex problems and communicate solutions effectively to stakeholders</p>
+                        <div class="comm-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
                         </div>
                     </div>
-                    <div class="skill-bar">
-                        <div class="skill-info">
-                            <span class="skill-name">Technical Documentation</span>
-                            <span class="skill-percentage">85%</span>
+                    <div class="communication-card fade-in delay-2">
+                        <div class="comm-icon-wrapper">
+                            <i class="fas fa-comments"></i>
                         </div>
-                        <div class="skill-progress">
-                            <div class="skill-progress-bar" style="width: 85%"></div>
+                        <h3>Client Communication</h3>
+                        <p>Skilled in understanding client requirements, providing regular updates, and maintaining clear communication throughout projects</p>
+                        <div class="comm-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                    <div class="communication-card fade-in delay-3">
+                        <div class="comm-icon-wrapper">
+                            <i class="fas fa-file-alt"></i>
+                        </div>
+                        <h3>Technical Documentation</h3>
+                        <p>Proficient in creating comprehensive documentation, writing clear code comments, and maintaining organized project wikis</p>
+                        <div class="comm-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
                         </div>
                     </div>
                 </div>
