feat: Add TypeScript card and update Python to include TensorFlow/OpenCV

--- a/index.html
+++ b/index.html
@@ -139,24 +139,31 @@
                     <div class="skill-icon">
                         <i class="fab fa-js-square"></i>
                     </div>
-                    <h3>MEARN Stack</h3>
-                    <p>Full-stack development with MongoDB, Express.js, Angular/React, Node.js</p>
+                    <h3>MERN Stack</h3>
+                    <p>Full-stack development with MongoDB, Express.js, React, Node.js</p>
                 </div>
                 <div class="skill-card fade-in delay-1">
                     <div class="skill-icon">
                         <i class="fab fa-react"></i>
                     </div>
                     <h3>Frontend Development</h3>
-                    <p>React, Next.js, TypeScript, Tailwind CSS, shadcn/ui</p>
+                    <p>React, Next.js, Tailwind CSS, shadcn/ui</p>
                 </div>
                 <div class="skill-card fade-in delay-2">
+                    <div class="skill-icon">
+                        <i class="fas fa-code"></i>
+                    </div>
+                    <h3>TypeScript</h3>
+                    <p>Type-safe development, Interfaces, Generics, Advanced Types</p>
+                </div>
+                <div class="skill-card fade-in delay-3">
                     <div class="skill-icon">
                         <i class="fas fa-server"></i>
                     </div>
                     <h3>Backend Development</h3>
                     <p>Node.js, Express.js, REST APIs, Authentication</p>
                 </div>
-                <div class="skill-card fade-in delay-3">
+                <div class="skill-card fade-in">
                     <div class="skill-icon">
                         <i class="fas fa-database"></i>
                     </div>
@@ -174,8 +181,8 @@
                     <div class="skill-icon">
                         <i class="fab fa-python"></i>
                     </div>
-                    <h3>Python</h3>
-                    <p>Scripting, Automation, Data Analysis</p>
+                    <h3>Python & Deep Learning</h3>
+                    <p>TensorFlow, OpenCV, Computer Vision, Neural Networks</p>
                 </div>
             </div>
 
