--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
             <div class="about-content">
                 <div class="about-text fade-in">
                     <h3>Building the Future with Code</h3>
-                    <p>I'm a <strong>Full-Stack Software Developer</strong> focused on building modern, scalable web applications using the <strong>JavaScript and TypeScript</strong> ecosystem, with a growing interest in <strong>AI-powered solutions</strong>.</p>
-                    <p>I have hands-on experience developing backend systems with <strong>Node.js and Express.js</strong>, building high-performance frontends with <strong>Next.js and React</strong>, and designing reliable data layers using <strong>PostgreSQL and Drizzle ORM</strong>.</p>
-                    <p>Alongside web development, I enjoy enhancing applications with AI capabilities, integrating tools such as <strong>Gemini AI</strong> and <strong>Speech-to-Text APIs</strong> to create smarter and more interactive user experiences.</p>
-                    <p>I'm currently seeking a <strong>Software Engineering internship</strong>, where I can apply my skills, learn from real-world projects, and contribute to building impactful digital products as part of a collaborative team.</p>
+                    <p style="text-align: justify;">I'm a <strong>Full-Stack Software Developer</strong> focused on building modern, scalable web applications using the <strong>JavaScript and TypeScript</strong> ecosystem, with a growing interest in <strong>AI-powered solutions</strong>.</p>
+                    <p style="text-align: justify;">I have hands-on experience developing backend systems with <strong>Node.js and Express.js</strong>, building high-performance frontends with <strong>Next.js and React</strong>, and designing reliable data layers using <strong>PostgreSQL and Drizzle ORM</strong>.</p>
+                    <p style="text-align: justify;">Alongside web development, I enjoy enhancing applications with AI capabilities, integrating tools such as <strong>Gemini AI</strong> and <strong>Speech-to-Text APIs</strong> to create smarter and more interactive user experiences.</p>
+                    <p style="text-align: justify;">I'm currently seeking a <strong>Software Engineering internship</strong>, where I can apply my skills, learn from real-world projects, and contribute to building impactful digital products as part of a collaborative team.</p>
                     <a href="#contact" class="btn">Let's Connect</a>
                 </div>
                 <div class="about-image fade-in delay-1">
