--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
             <div class="hero-content">
                 <div class="hero-text fade-in">
                     <h1 class="typing">Hi, I'm <span>DCDS Karunanayaka</span></h1>
-                    <h2>BSc (Hons) Software Engineering Undergraduate</h2>
-                    <p>Building Scalable Web & AI-Powered Applications with MERN Stack</p>
+                    <h2>Full-Stack Software Developer | Aspiring AI/ML Engineer</h2>
+                    <h4>Building Scalable Web & AI-Powered Applications (MERN Stack)</h4>
+                    <p>BSc (Hons) Software Engineering</p>
                     <a href="#contact" class="btn">Get In Touch</a>
                 </div>
                 <div class="profile-image fade-in delay-1">
