feat: update portfolio Abot me section

--- a/index.html
+++ b/index.html
@@ -65,11 +65,10 @@
             <div class="about-content">
                 <div class="about-text fade-in">
                     <h3>Building the Future with Code</h3>
-                    <p>I'm a detail-oriented <strong>Software Engineering undergraduate</strong> at <strong>Sabaragamuwa University of Sri Lanka</strong>, specializing in building modern, full-stack web applications with the JavaScript and TypeScript ecosystem.</p>
-                    <p>I am deeply passionate about creating seamless user experiences and integrating cutting-edge technologies, particularly in the realm of AI.</p>
-                    <p>My hands-on experience involves developing robust server-side applications with <strong>Node.js and Express.js</strong>, and building dynamic, high-performance frontends using <strong>Next.js and React</strong>. I am proficient in connecting applications to databases like <strong>PostgreSQL</strong> using modern tools like Drizzle ORM.</p>
-                    <p>I enjoy enhancing projects with AI functionalities, leveraging APIs like <strong>Gemini AI</strong> and <strong>Speech-to-Text</strong> to create smarter, more interactive solutions.</p>
-                    <p>I am actively seeking a <strong>Software Engineering internship</strong> where I can contribute my skills in a fast-paced environment. I am a collaborative team player and a dedicated problem-solver, eager to learn from industry experts and help build exceptional digital products.</p>
+                    <p>I'm a <strong>Full-Stack Software Developer</strong> focused on building modern, scalable web applications using the <strong>JavaScript and TypeScript</strong> ecosystem, with a growing interest in <strong>AI-powered solutions</strong>.</p>
+                    <p>I have hands-on experience developing backend systems with <strong>Node.js and Express.js</strong>, building high-performance frontends with <strong>Next.js and React</strong>, and designing reliable data layers using <strong>PostgreSQL and Drizzle ORM</strong>.</p>
+                    <p>Alongside web development, I enjoy enhancing applications with AI capabilities, integrating tools such as <strong>Gemini AI</strong> and <strong>Speech-to-Text APIs</strong> to create smarter and more interactive user experiences.</p>
+                    <p>I'm currently seeking a <strong>Software Engineering internship</strong>, where I can apply my skills, learn from real-world projects, and contribute to building impactful digital products as part of a collaborative team.</p>
                     <a href="#contact" class="btn">Let's Connect</a>
                 </div>
                 <div class="about-image fade-in delay-1">
