feat: Revamp hero section with improved layout, styling, and new buttons

--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text fade-in">
-                    <h1 class="typing">Hi, I'm <span>DCDS Karunanayaka</span></h1>
-                    <h2>Full-Stack Software Developer | Aspiring AI/ML Engineer</h2>
-                    <h4>Building Scalable Web & AI-Powered Applications (MERN Stack)</h4>
-                    <p>BSc (Hons) Software Engineering</p>
-                    <a href="#contact" class="btn">Get In Touch</a>
+                    <p class="hero-greeting">Hi, I'm</p>
+                    <h1 class="hero-name">DCDS Karunanayaka</h1>
+                    <h2 class="hero-title">Full-Stack Software Developer | Aspiring AI/ML Engineer</h2>
+                    <p class="hero-description">Building Scalable Web & AI-Powered Applications (MERN Stack)</p>
+                    <p class="hero-education">BSc (Hons) Software Engineering</p>
+                    <div class="hero-buttons">
+                        <a href="#contact" class="btn btn-primary">Hire Me</a>
+                        <a href="#" class="btn btn-secondary" id="downloadCV">Download CV</a>
+                    </div>
                 </div>
                 <div class="profile-image fade-in delay-1">
                     <div class="profile-img-container">
