feat: Revise About section with enhanced content structure and styling

--- a/index.html
+++ b/index.html
@@ -69,11 +69,40 @@
             <div class="about-content">
                 <div class="about-text fade-in">
                     <h3>Building the Future with Code</h3>
-                    <p style="text-align: justify;">I'm a <strong>Full-Stack Software Developer</strong> focused on building modern, scalable web applications using the <strong>JavaScript and TypeScript</strong> ecosystem, with a growing interest in <strong>AI-powered solutions</strong>.</p>
-                    <p style="text-align: justify;">I have hands-on experience developing backend systems with <strong>Node.js and Express.js</strong>, building high-performance frontends with <strong>Next.js and React</strong>, and designing reliable data layers using <strong>PostgreSQL and Drizzle ORM</strong>.</p>
-                    <p style="text-align: justify;">Alongside web development, I enjoy enhancing applications with AI capabilities, integrating tools such as <strong>Gemini AI</strong> and <strong>Speech-to-Text APIs</strong> to create smarter and more interactive user experiences.</p>
-                    <p style="text-align: justify;">I'm currently seeking a <strong>Software Engineering internship</strong>, where I can apply my skills, learn from real-world projects, and contribute to building impactful digital products as part of a collaborative team.</p>
-                    <a href="#contact" class="btn">Let's Connect</a>
+                    <p class="about-intro">I'm a <strong>Full-Stack Software Developer</strong> specializing in modern web applications and AI-powered solutions. With hands-on experience in the <strong>MERN stack</strong> and emerging AI technologies, I build scalable, user-centric digital products that solve real-world problems.</p>
+                    
+                    <div class="about-highlights">
+                        <div class="highlight-item">
+                            <i class="fas fa-code"></i>
+                            <div>
+                                <h4>MERN Stack Expertise</h4>
+                                <p>Full-stack development with MongoDB, Express.js, React, Node.js, Next.js, TypeScript, and PostgreSQL</p>
+                            </div>
+                        </div>
+                        <div class="highlight-item">
+                            <i class="fas fa-robot"></i>
+                            <div>
+                                <h4>AI Integration</h4>
+                                <p>Experience with Gemini AI, Speech-to-Text APIs, TensorFlow, and OpenCV for intelligent applications</p>
+                            </div>
+                        </div>
+                        <div class="highlight-item">
+                            <i class="fas fa-graduation-cap"></i>
+                            <div>
+                                <h4>Academic Foundation</h4>
+                                <p>BSc (Hons) Software Engineering at Sabaragamuwa University of Sri Lanka</p>
+                            </div>
+                        </div>
+                        <div class="highlight-item">
+                            <i class="fas fa-briefcase"></i>
+                            <div>
+                                <h4>Internship Ready</h4>
+                                <p>Actively seeking opportunities to contribute to innovative projects and grow with industry-leading teams</p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <a href="#contact" class="btn btn-primary">Let's Connect</a>
                 </div>
                 <div class="about-image fade-in delay-1">
                     <div class="about-img-container">
