feat: Enhance Education section with new card layout, icons, and detailed content

--- a/index.html
+++ b/index.html
@@ -120,16 +120,95 @@
             <div class="section-title">
                 <h2>Education</h2>
             </div>
-            <div class="education-item fade-in">
-                <div class="education-header">
-                    <div>
-                        <h3 class="education-title">BSc (Hons) Software Engineering</h3>
-                        <div class="education-institution">Sabaragamuwa University of Sri Lanka</div>
-                    </div>
-                    <div class="education-period">Undergraduate</div>
+            
+            <!-- BSc (Hons) Software Engineering -->
+            <div class="education-card fade-in">
+                <div class="education-icon">
+                    <i class="fas fa-graduation-cap"></i>
                 </div>
-                <div class="education-details">
-                    <p>Currently pursuing a comprehensive software engineering degree with focus on modern web technologies, AI integration, and software development methodologies.</p>
+                <div class="education-content">
+                    <div class="education-header">
+                        <div class="education-info">
+                            <h3 class="education-title">BSc (Hons) Software Engineering</h3>
+                            <div class="education-institution">
+                                <i class="fas fa-university"></i>
+                                <span>Sabaragamuwa University of Sri Lanka</span>
+                            </div>
+                        </div>
+                        <div class="education-period">
+                            <i class="fas fa-calendar-alt"></i>
+                            <span>2023 – 2027</span>
+                        </div>
+                    </div>
+                    <div class="education-details">
+                        <p>Currently pursuing a comprehensive software engineering degree with focus on modern web technologies, AI integration, and software development methodologies.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- G.C.E. Advanced Level -->
+            <div class="education-card fade-in delay-1">
+                <div class="education-icon">
+                    <i class="fas fa-book-open"></i>
+                </div>
+                <div class="education-content">
+                    <div class="education-header">
+                        <div class="education-info">
+                            <h3 class="education-title">G.C.E. Advanced Level (Physical Science Stream)</h3>
+                            <div class="education-institution">
+                                <i class="fas fa-school"></i>
+                                <span>Pu/Science High School, Puttalam, Sri Lanka</span>
+                            </div>
+                        </div>
+                        <div class="education-period">
+                            <i class="fas fa-calendar-alt"></i>
+                            <span>2021 – 2022</span>
+                        </div>
+                    </div>
+                    <div class="education-details">
+                        <div class="education-results">
+                            <div class="result-item">
+                                <i class="fas fa-atom"></i>
+                                <span>Physics – <strong>B</strong></span>
+                            </div>
+                            <div class="result-item">
+                                <i class="fas fa-flask"></i>
+                                <span>Chemistry – <strong>C</strong></span>
+                            </div>
+                            <div class="result-item">
+                                <i class="fas fa-calculator"></i>
+                                <span>Combined Mathematics – <strong>C</strong></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- G.C.E. Ordinary Level -->
+            <div class="education-card fade-in delay-2">
+                <div class="education-icon">
+                    <i class="fas fa-certificate"></i>
+                </div>
+                <div class="education-content">
+                    <div class="education-header">
+                        <div class="education-info">
+                            <h3 class="education-title">G.C.E. Ordinary Level</h3>
+                            <div class="education-institution">
+                                <i class="fas fa-school"></i>
+                                <span>Pu/Ananda National College, Puttalam, Sri Lanka</span>
+                            </div>
+                        </div>
+                        <div class="education-period">
+                            <i class="fas fa-calendar-alt"></i>
+                            <span>2018</span>
+                        </div>
+                    </div>
+                    <div class="education-details">
+                        <div class="education-achievement">
+                            <i class="fas fa-trophy"></i>
+                            <span><strong>8 A's, 1 B</strong> (Mathematics & Science – A, English – B)</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
